dab2c-executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/monm/egress-mtls-monm-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egressgateway-mtls-@fpi-name@-monm-unver
spec:
  exportTo:
    - .
  gateways:
    - egressgateway-mtls-@fpi-name@-monm-unver
    - mesh
  hosts:
    - ${global.monitoring.store.host}
  http:
    - match:
        - gateways:
            - mesh
          port: ${global.monitoring.store.port}
      route:
        - destination:
            host: egressgateway-@fpi-name@-unver
            port:
              number: ${global.monitoring.store.port}
          weight: 100
      retries:
        attempts: 0
    - match:
        - gateways:
            - egressgateway-mtls-@fpi-name@-monm-unver
          port: ${global.monitoring.store.port}
      route:
        - destination:
            host: ${global.monitoring.store.host}
            port:
              number: ${global.monitoring.store.port}
          weight: 100
      retries:
        attempts: 0
